--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
 
             <article>
                     <img src="imc.jfif" class="img"><br><br><br>
+
                 <footer>
                     <p>Imagens Meramente Ilustrativas</p>
                     <p style="color: black;">Atenção! O IMC deve ser interpretado somente por um profissional de saúde.</p>
                     <p style="color: black;">&copy; Cotemig</p>
-                </footer>           
+                </footer>  
+
             </article><br><br>
 
-                <div style="color: black;" class="result" id='resultado'></div> 
-  
+                <div class="result" id='resultado'></div> 
         </div>
-
     </section>
-
+    
     <script src="script.js"></script>
     
 </body>
